// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/Elements/Inputs/TreeSpeciesInput Default 1`] = `
<div
  className="relative space-y-2"
>
  <label
    className="mr-2 inline uppercase text-bold-body-300"
    data-testid="txt"
    htmlFor=":r2b:"
  >
    Tree Species Grown *
  </label>
  <p
    className="text-body-400 with-inner-html"
    dangerouslySetInnerHTML={
      Object {
        "__html": "List the tree species that you expect to restore on this project, across all sites. Please enter the scientific name for each tree species.",
      }
    }
    data-testid="txt"
    id=":r2b:-description"
  />
  <div>
    <div
      className="mb-2 mt-8 flex justify-between"
    >
      <p
        className="uppercase text-body-900"
        data-testid="txt"
      >
         (
        1
        )
      </p>
    </div>
    <div
      className="max-h-[300px] overflow-y-auto"
    >
      <div
        className="relative flex w-full"
      >
        <div
          className="flex-1 relative space-y-2"
        >
          <div
            className="relative"
          >
            <input
              aria-describedby=":r2c:-description"
              aria-invalid={false}
              className="w-full outline-none transition-all duration-300 ease-in-out focus:ring-transparent border-0 border-b py-[10px] px-0 border-b-neutral-400"
              defaultValue="Test"
              id=":r2c:"
              name="name"
              onChange={[Function]}
              onKeyDownCapture={[Function]}
              placeholder="Species Name"
              type="text"
            />
          </div>
        </div>
        <button
          className="flex items-center justify-center rounded-full hover:bg-opacity-60 absolute right-0 top-3"
          onClick={[Function]}
        >
          <div
            style={
              Object {
                "height": undefined,
                "width": 22,
              }
            }
          />
        </button>
      </div>
    </div>
    <button
      className="bg-white border border-neutral-1000 hover:border-primary-500 disabled:border-neutral-1000 py-[10.5px] rounded-md px-4 uppercase disabled:bg-neutral-300 disabled:text-neutral-800 transition whitespace-nowrap text-black min-h-10 flex items-center justify-center gap-1.5 tracking-wide w-fit-content mt-4 w-fit"
      onClick={[Function]}
    >
      <div
        style={
          Object {
            "height": undefined,
            "width": 12,
          }
        }
      />
      <span
        className="flex items-center text-bold-caption-200"
      >
        Add Another undefined
      </span>
    </button>
  </div>
</div>
`;

exports[`Storyshots Components/Elements/Inputs/TreeSpeciesInput With Number 1`] = `
<div
  className="relative space-y-2"
>
  <label
    className="mr-2 inline uppercase text-bold-body-300"
    data-testid="txt"
    htmlFor=":r2d:"
  >
    Tree Species Grown *
  </label>
  <p
    className="text-body-400 with-inner-html"
    dangerouslySetInnerHTML={
      Object {
        "__html": "List the tree species that you expect to restore on this project, across all sites. Please enter the scientific name for each tree species.",
      }
    }
    data-testid="txt"
    id=":r2d:-description"
  />
  <div>
    <div
      className="mb-2 mt-8 flex justify-between"
    >
      <p
        className="uppercase text-body-900"
        data-testid="txt"
      >
         (
        1
        )
      </p>
      <p
        className="uppercase text-body-900"
        data-testid="txt"
      >
        Total Count: (23)
      </p>
    </div>
    <div
      className="max-h-[300px] overflow-y-auto"
    >
      <div
        className="relative flex w-full"
      >
        <div
          className="flex-1 relative space-y-2"
        >
          <div
            className="relative"
          >
            <input
              aria-describedby=":r2e:-description"
              aria-invalid={false}
              className="w-full outline-none transition-all duration-300 ease-in-out focus:ring-transparent border-0 border-b py-[10px] px-0 border-b-neutral-400"
              defaultValue="Test"
              id=":r2e:"
              name="name"
              onChange={[Function]}
              onKeyDownCapture={[Function]}
              placeholder="Species Name"
              type="text"
            />
          </div>
        </div>
        <div
          className="flex-3 relative space-y-2"
        >
          <div
            className="relative"
          >
            <input
              aria-describedby=":r2f:-description"
              aria-invalid={false}
              className="w-full outline-none transition-all duration-300 ease-in-out focus:ring-transparent border-0 border-b py-[10px] px-0 pl-4 border-b-neutral-400"
              defaultValue={23}
              id=":r2f:"
              name="amount"
              onChange={[Function]}
              onKeyDown={[Function]}
              onKeyDownCapture={[Function]}
              placeholder="Enter value"
              type="number"
            />
          </div>
        </div>
        <button
          className="flex items-center justify-center rounded-full hover:bg-opacity-60 absolute right-0 top-3"
          onClick={[Function]}
        >
          <div
            style={
              Object {
                "height": undefined,
                "width": 22,
              }
            }
          />
        </button>
      </div>
    </div>
    <button
      className="bg-white border border-neutral-1000 hover:border-primary-500 disabled:border-neutral-1000 py-[10.5px] rounded-md px-4 uppercase disabled:bg-neutral-300 disabled:text-neutral-800 transition whitespace-nowrap text-black min-h-10 flex items-center justify-center gap-1.5 tracking-wide w-fit-content mt-4 w-fit"
      onClick={[Function]}
    >
      <div
        style={
          Object {
            "height": undefined,
            "width": 12,
          }
        }
      />
      <span
        className="flex items-center text-bold-caption-200"
      >
        Add Another undefined
      </span>
    </button>
  </div>
</div>
`;
